k8s-for-desktop/traefik/traefik-Routers.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: /whoami
    kind: Rule
    services:
    - name: whoami
      port: 80
