k8s-for-desktop/traefik/whoami.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: dev
  labels:
    app: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: dev
  labels:
    app: whoami
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 80
  selector:
    app: whoami
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 8080
